--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
